--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>p5.js Music Waves</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-  <script src="dontthouch.js"></script> 
+  <script src="sketch.js"></script> 
 <body>
 </body>
 </html>
